assets/styles.css
/* This is the main styles file for the DevWeek project */

/* INSTALL Lato FONT */
@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap');

/* GLOBAL VARIABLES */
:root {
  /* Define the primary font */
  --primary-font: 'Lato', sans-serif;

  font-size: calc(16px + (42 - 16) * ((100vw - 375px) / (1800 - 375)));

  /* font-size: 62.5%; */

  /* Define different font weights */
  --light-weight: 300;
  --regular-weight: 400;
  --bold-weight: 700;
  --black-weight: 900;

  /* Define the color pallete */
  --primary-color: #d64a34;
  --light-primary-color: #d88567;
  --secondary-color: #303136;
  --gray-color: #949597;
  --light-gray-color: #c1c2c4;
  --very-light-gray-color: #efefef;
  --light-white-color: #f5f5f5;
  --almost-white-color: #fcfcfc;
}

/* RESET DEFAULT BROWSER STYLES */
*,
*::after,
*::before {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

/* GENERAL SETTINGS */
html {
  font-family: var(--primary-font);
  background-color: var(--light-white-color);
}

/* body {
  font-size: calc([minimum size] + ([maximum size] - [minimum size]) * ((100vw -
  [minimum viewport width]) / ([maximum viewport width] - [minimum viewport width])));
} */

body {
  color: var(--secondary-color);
  min-width: 30rem;
}

.container {
  width: 100%;
  padding: 0 1rem;
  margin: 0 auto;
}

img {
  width: 100%;
}

a {
  text-decoration: none;
  color: var(--secondary-color);
  font-weight: var(--bold-weight);
  font-size: 0.45rem;
  padding: 0.5rem;
  display: inline-block;
  transition: all 200ms ease-out;
}

a:hover {
  color: var(--primary-color);
  filter: saturate(4);
  scale: 1.05;
}

.btn {
  width: 85%;
  background-color: var(--primary-color);
  text-decoration: none;
  color: #fff;
  font-weight: var(--bold-weight);
  font-size: 1.2rem;
  padding: 1.8em 3em;
  display: block;
  margin: 2.5em auto;
  text-align: center;
  display: flex;
  align-items: center;
  justify-content: center;
  transition: all 200ms ease-out;
}

.btn-join {
  letter-spacing: 0.015em;
}

.btn-join::after {
  content: "Join DW Global Summit 2022";
}

.btn-join:hover {
  background-color: var(--light-gray-color);
  color: var(--primary-color);
  scale: none;
}

.btn-more::before {
  content: "More";
}

.btn-more:hover {
  background-color: var(--secondary-color);
  color: #fff;
  filter: saturate(4);
}

/* NAVBAR STYLES */
.burguer-nav {
  position: fixed;
  top: 0;
  z-index: 2;
}

.burguer-nav a {
  width: 1.5rem;
  padding: 0.1em;
  margin: 1em;
  filter: saturate(2.5);
  cursor: pointer;
}

.burguer-nav a:hover {
  filter:grayscale(1);
  scale: none;
}

.mini-nav ul,
.main-nav ul {
  display: none;
}

.contain-nav {
  display: none;
  height: 100vh;
  width: 100%;
  position: fixed;
  top: 0;
  left: 0;
  z-index: 1;
  background-color: rgba(214, 74, 52, 0.8);
  backdrop-filter: blur(3px);
  transition: all 250ms ease-out;
}
.contain-nav .main-nav {
  width: 100%;
}

.contain-nav ul {
  display: flex;
  list-style: none;
  flex-direction: column;
  margin-top: 2.4em;
}

.contain-nav li a {
  display: block;
  font-size: 1.5rem;
  border-bottom: 2px solid var(--secondary-color);
  padding: 0.5em 0 0.2em 0.6em;
  color: var(--almost-white-color);
  letter-spacing: 0.03em;
}

.contain-nav .x-close a {
  border-bottom: none;
  cursor: pointer;
  position: absolute;
  width: 2.2rem;
  right: 0.6em;
  top: -0.2em;
}
.contain-nav .x-close a:hover {
  background-color: transparent;
  padding-left: 0.6em;
  scale: none;
  filter: opacity(.9) invert(.8);
}

.contain-nav li a:hover {
  background-color: rgba(48, 49, 54, 0.7);
  padding-left: 1.5em;
  letter-spacing: 0.06em;
}

.contain-nav .x-close {
  width: 2rem;
  padding: 0;
}

.contain-nav .logo,
.contain-nav .campaign {
  display: none;
}

/* HEADLINE STYLES */
.banner {
  width: 100%;
  background-image:
    linear-gradient(
      rgba(253, 253, 253, 0.88),
      rgba(253, 253, 253, 0.88)
    ),
    url(./bgimgs/banner.jpg);
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
  padding: 5em 0 10em;
}

.banner h1 {
  font-size: 2.6rem;
  line-height: 2.7rem;
  font-weight: var(--black-weight);
  color: var(--primary-color);
  letter-spacing: 0.005em;
  background: url(./bgimgs/banner-inked.jpg);
  background-position: -15% 55%;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

.banner .slogan {
  font-size: 1.2rem;
  line-height: 1.5rem;
  font-weight: var(--bold-weight);
  color: var(--primary-color);
}

.banner .event-text {
  background-color: var(--very-light-gray-color);
  border: 3px solid #fff;
  padding: 0.8em;
  font-size: 0.8rem;
  line-height: 1.2rem;
  margin: 1em 0;
}

.banner .event-date {
  font-size: 1.8rem;
  font-weight: var(--black-weight);
  letter-spacing: 0.05em;
  margin-bottom: 0.4rem;
}

.banner .event-place {
  font-size: 1rem;
  font-weight: var(--bold-weight);
}

/* MAIN PROGRAM STYLES */
#program {
  background-color: var(--secondary-color);
  padding: 2rem 0;
  color: var(--light-gray-color);
}

#program h2,
#speakers h2,
#partners h2 {
  color: #fff;
  font-weight: var(--bold-weight);
  text-align: center;
  padding: 0.7em;
}

#program hr,
#speakers hr,
#partners hr {
  width: 10%;
  margin: 0 auto;
  border: 1px solid var(--primary-color);
}

#program ul {
  display: flex;
  flex-direction: column;
  gap: 0.7rem;
  margin: 2.5rem auto;
}

#program ul li {
  list-style: none;
  height: 6rem;
  padding: 1.5em;
  background-color: rgba(253, 253, 253, 0.05);
  display: flex;
  font-size: 0.9rem;
  line-height: 1.3rem;
  align-items: center;
  gap: 1em;
  transition: all 150ms ease-in-out;
}

#program ul li:hover {
  scale: 1.02;
  border: 2px solid #fff;
}

#program ul li span {
  display: inline-block;
  width: 8.5%;
}
/* ... */

